--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 26 Jan 2015.
+%% Created using Papers on Fri, 20 Mar 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -890,7 +890,7 @@ month = sep
 
 @mastersthesis{Svensson:2008,
 author = {Svensson, Bo Joel and Claessen, Koen and Sheeran, Mary},
-title = {{Obsidian: An embedded language for data--parallel programming}},
+title = {{Obsidian: An embedded language for data-parallel programming}},
 school = {Department of Computer Science and Engineering, Chalmers University of Technology},
 year = {2008}
 }
@@ -2330,7 +2330,7 @@ month = oct
 @inproceedings{Kameyama:2014fe,
 author = {Kameyama, Yukiyoshi and Kiselyov, Oleg and Shan, Chung-chieh},
 title = {{Combinators for impure yet hygienic code generation}},
-booktitle = {PEPM '14: The ACM SIGPLAN 2014 Workshop on Partial Evaluation and Program Manipulation},
+booktitle = {PEPM '14: The 2014 ACM Workshop on Partial Evaluation and Program Manipulation},
 year = {2014},
 pages = {3--14},
 month = jan
@@ -3107,7 +3107,7 @@ month = feb
 }
 
 @inproceedings{Rompf:2014fp,
-author = {Rompf, Tiark and Sujeeth, Arvind K and Brown, Kevin J and Lee, HyoukJoong and Chafi, Hassan and Olukotun, Kunle and Rompf, Tiark and Sujeeth, Arvind K and Brown, Kevin J and Lee, HyoukJoong and Chafi, Hassan and Olukotun, Kunle},
+author = {Rompf, Tiark and Sujeeth, Arvind K and Brown, Kevin J and Lee, HyoukJoong and Chafi, Hassan and Olukotun, Kunle},
 title = {{Surgical precision JIT compilers}},
 booktitle = {PLDI '14: The 34rd ACM conference on Programming Language Design and Implementation},
 year = {2014},
@@ -3163,10 +3163,9 @@ pages = {1--150}
 author = {Altenkirch, Thorsten and Reus, Bernhard},
 title = {{Monadic Presentation of Lambda Terms Using Generalised Inductive Types}},
 booktitle = {CSL '99: Computer Science Logic},
-year = {2003},
+year = {1999},
 editor = {Flum, J{\"o}rg and Rodriguez-Artalejo, Mario},
-pages = {453--468},
-month = may
+pages = {453--468}
 }
 
 @inproceedings{Geoffray:2010fa,
@@ -3436,6 +3435,107 @@ title = {{The Fun of Programming}},
 publisher = {Palgrave}
 }
 
+@inproceedings{Bosboom:2014el,
+author = {Bosboom, Jeffrey and Rajadurai, Sumanaruban and Wong, Weng-Fai and Amarasinghe, Saman},
+title = {{StreamJIT: a commensal compiler for high-performance stream programming}},
+booktitle = {OOPSLA '14: The 2014 ACM International Conference on Object Oriented Programming Systems Languages {\&} Applications},
+year = {2014},
+pages = {177--195},
+month = dec
+}
+
+@inproceedings{Chlipala:2013ch,
+author = {Chlipala, Adam},
+title = {{The bedrock structured programming system: combining generative metaprogramming and hoare logic in an extensible program verifier}},
+booktitle = {ICFP '13: The 18th ACM SIGPLAN international conference on Functional programming},
+year = {2013},
+pages = {391--402},
+month = nov
+}
+
+@inproceedings{Sujeeth:2013jv,
+author = {Sujeeth, Arvind K and Rompf, Tiark and Brown, Kevin J and Lee, HyoukJoong and Chafi, Hassan and Popic, Victoria and Wu, Michael and Prokopec, Aleksandar and Jovanovic, Vojin and Odersky, Martin and Olukotun, Kunle},
+title = {{Composition and Reuse with Compiled Domain-Specific Languages}},
+booktitle = {ECOOP '13: The 27th European Conference on Object-Oriented Programming},
+year = {2013},
+pages = {52--78}
+}
+
+@inproceedings{Kumar:2014bp,
+author = {Kumar, Ramana and Myreen, Magnus O and Norrish, Michael and Owens, Scott},
+title = {{CakeML: a verified implementation of ML}},
+booktitle = {POPL '14: The 41st ACM symposium on Principles of Programming Languages},
+year = {2014},
+pages = {179--191},
+month = jan
+}
+
+@inproceedings{Xi:2001hr,
+author = {Xi, Hongwei and Harper, Robert},
+title = {{A dependently typed assembly language}},
+booktitle = {ICFP '01: The 6th ACM SIGPLAN international conference on Functional programming},
+year = {2001},
+pages = {169--180},
+month = oct
+}
+
+@inproceedings{Yang:2011gf,
+author = {Yang, Xuejun and Chen, Yang and Eide, Eric and Regehr, John},
+title = {{Finding and understanding bugs in C compilers}},
+booktitle = {PLDI '11: The 32nd ACM conference on Programming Language Design and Implementation},
+year = {2011},
+pages = {283--294},
+month = jun
+}
+
+@article{Guillemette:2007cj,
+author = {Guillemette, Louis-Julien and Monnier, Stefan},
+title = {{Type-Safe Code Transformations in Haskell}},
+journal = {Electronic Notes in Theoretical Computer Science},
+year = {2007},
+volume = {174},
+number = {7},
+pages = {23--39},
+month = jun
+}
+
+@article{Leroy:2009gn,
+author = {Leroy, Xavier},
+title = {{Formal verification of a realistic compiler}},
+journal = {Communications of the ACM},
+year = {2009},
+volume = {52},
+number = {7},
+pages = {107},
+month = jul
+}
+
+@inproceedings{Tarditi:1996kq,
+author = {Tarditi, David and Morrisett, Greg and Cheng, Perry and Stone, Chris and Harper, Robert and Lee, Peter},
+title = {{TIL: a type-directed optimizing compiler for ML}},
+booktitle = {PLDI '96: The 1996 ACM conference on Programming Language Design and Implementation},
+year = {1996},
+pages = {181--192},
+month = may
+}
+
+@inproceedings{McCreight:2010ih,
+author = {McCreight, Andrew and Chevalier, Tim and Tolmach, Andrew},
+title = {{A certified framework for compiling and executing garbage-collected languages}},
+booktitle = {ICFP '10: The 15th ACM SIGPLAN international conference on Functional programming},
+year = {2010},
+pages = {273--284},
+month = sep
+}
+
+@inproceedings{Leroy:1992fv,
+author = {Leroy, Xavier},
+title = {{Unboxed objects and polymorphic typing}},
+booktitle = {POPL '92: The 19th ACM symposium on Principles of Programming Languages},
+year = {1992},
+pages = {177--188}
+}
+
 @book{Kirk:2010we,
 author = {Kirk, David B. and Hwu, Wen-mei W.},
 title = {{Programming Massively Parallel Processors}},
@@ -3443,6 +3543,132 @@ publisher = {Morgan Kaufmann},
 year = {2010},
 edition = {1st Ed},
 month = oct
+}
+
+@inproceedings{Klein:2009eh,
+author = {Klein, Gerwin and Elphinstone, Kevin and Heiser, Gernot and Andronick, June and Cock, David and Derrin, Philip and Elkaduwe, Dhammika and Engelhardt, Kai and Kolanski, Rafal and Norrish, Michael and Sewell, Thomas and Tuch, Harvey and Winwood, Simon},
+title = {{seL4: Formal Verification of an OS Kernel}},
+booktitle = {SOSP '09: The 22nd ACM Symposium on Operating Systems Principles},
+year = {2009},
+pages = {207--220},
+publisher = {ACM}
+}
+
+@inproceedings{Chen:2003bn,
+author = {Chen, Chiyan and Xi, Hongwei},
+title = {{Implementing typeful program transformations}},
+booktitle = {PEPM '03: The 2003 ACM Workshop on Partial Evaluation and Program Manipulation},
+year = {2003},
+pages = {20--28},
+month = oct
+}
+
+@webpage{PyPy,
+title = {{PyPy}},
+url = {http://pypy.org}
+}
+
+@webpage{Rubinius,
+title = {{Rubinius}},
+url = {http://rubini.us}
+}
+
+@webpage{CUDA-LLVM,
+author = {{NVIDIA}},
+title = {{CUDA LLVM Compiler}},
+url = {https://developer.nvidia.com/cuda-llvm-compiler}
+}
+
+@webpage{intel-ispc-compiler,
+author = {{Intel Corporation}},
+title = {{Intel SPMD Program Compiler}},
+url = {http://ispc.github.io}
+}
+
+@article{Appel:1998vv,
+author = {Appel, Andrew W},
+title = {{SSA is functional programming}},
+journal = {ACM SIGPLAN Notices},
+year = {1998},
+volume = {33},
+number = {4},
+pages = {17--20},
+month = apr
+}
+
+@inproceedings{Kelsey:1995ty,
+author = {Kelsey, Richard A},
+title = {{A correspondence between continuation passing style and static single assignment form}},
+booktitle = {IR '95: The 1995 ACM Workshop on Intermediate Representations},
+year = {1995},
+pages = {13--22}
+}
+
+@inproceedings{Chong:2015ts,
+author = {Chong, Nathan and Donaldson, Alastair F and Lascu, Andrei and Lidbury, Christopher},
+title = {{Many-Core Compiler Fuzzing}},
+booktitle = {PLDI '15: The 35th ACM conference on Programming Language Design and Implementation},
+year = {2015}
+}
+
+@inproceedings{Peterson:1993kc,
+author = {Peterson, John and Jones, Mark},
+title = {{Implementing type classes}},
+booktitle = {PLDI '93: The 1993 ACM confirence on Programming Language Design and Implementation},
+year = {1993},
+pages = {227--236},
+month = jun
+}
+
+@article{Hall:1996ez,
+author = {Hall, Cordelia V and Hammond, Kevin and Peyton Jones, Simon L and Wadler, Philip L},
+title = {{Type classes in Haskell}},
+journal = {ACM Transactions on Programming Languages and Systems},
+year = {1996},
+volume = {18},
+number = {2},
+pages = {109--138},
+month = mar
+}
+
+@webpage{OpenACC:2013,
+title = {{OpenACC}},
+url = {http://www.openacc.org}
+}
+
+@inproceedings{Herhut:2013ea,
+author = {Herhut, Stephan and Hudson, Richard L and Shpeisman, Tatiana and Sreeram, Jaswanth},
+title = {{River trail: a path to parallelism in JavaScript}},
+booktitle = {OOPSLA '13: The 2013 ACM International Conference on Object Oriented Programming Systems Languages {\&} Applications},
+year = {2013},
+pages = {729--744},
+month = oct
+}
+
+@inproceedings{Schrijvers:2009cw,
+author = {Schrijvers, Tom and Peyton Jones, Simon and Sulzmann, Martin and Vytiniotis, Dimitrios},
+title = {{Complete and decidable type inference for GADTs}},
+booktitle = {ICFP '09: The 14th ACM SIGPLAN international conference on Functional programming},
+year = {2009},
+pages = {341--352},
+month = aug
+}
+
+@inproceedings{Pfannenstiel:1999bk,
+author = {Pfannenstiel, Wolf},
+title = {{Piecewise Execution of Nested Parallel Programs - A Thread-Based Approach}},
+booktitle = {Euro-Par '99: Parallel Processing},
+year = {1999},
+pages = {445--448}
+}
+
+@inproceedings{Thies:2002km,
+author = {Thies, William and Karczmarek, Michal and Amarasinghe, Saman},
+title = {{StreamIt: A Language for Streaming Applications}},
+booktitle = {CC '02: The 11th International Conference on Compiler Construction},
+year = {2002},
+pages = {179--196},
+month = mar
 }
 
 @inproceedings{Rompf:2013er,
