sec 2: mention some future work for scan
The comment asked more to explain why the current implementation discards all but the last element in the first phase. There isn't a particular reason for that one way or the other, the implementation simply has not been optimised. This comment just points that optimisation out as useful future work.

--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -404,7 +404,11 @@ algorithm depicted in Figure~\ref{fig:fast_scan} proceeds in three phases:
 \end{enumerate}
 
 For an exclusive scan, it is also necessary to ensure that the computation of
-the partial block sums includes the seed element.
+the partial block sums includes the seed element. We note that, although the
+current implementation discards all but the last element of each of the
+sub-arrays in step 1, this behaviour may not be necessary. A critical
+performance evaluation of Accelerate's scan implementation would be valuable
+future work.
 
 
 \subsubsection{Inclusive vs. Exclusive scan}
