--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -210,9 +210,14 @@ first occurrence of a shared subterm are pruned,
 and we do not descend into terms that have been previously encountered. This
 avoids completely unfolding the embedded expression, so the complexity of
 sharing observation is proportional to the number of nodes in the tree
-\emph{with} sharing.\footnote{Since computing stable names requires the use of
-Haskell's \footcode{IO} monad, we can use a hash table to store the occurrence
-counts and thereby keep the complexity of Phase 1 as $\mathcal{O}\left(n\right)$.}
+\emph{with} sharing.%
+\footnote{Since computing stable names requires the use of Haskell's
+\footcode{IO} monad, we can use a hash table to store the occurrence counts and
+thereby keep the complexity of Phase 1 as
+$\mathcal{O}\left(n\right)$.}%
+\footnote{This is also why we do not use redundancy elimination techniques such
+as global value numbering or common subexpression elimination, as those methods
+are applied to the completely unfolded expression.}
 
 As the stable name of an expression is an intensional property, it can only be
 determined in Haskell's @IO@ monad, and strictly speaking, because of this
