--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 20 Mar 2015.
+%% Created using Papers on Mon, 23 Mar 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -3669,6 +3669,16 @@ booktitle = {CC '02: The 11th International Conference on Compiler Construction}
 year = {2002},
 pages = {179--196},
 month = mar
+}
+
+@inproceedings{Gupta:2014ik,
+author = {Gupta, Kshitij and Stuart, Jeff A and Owens, John D},
+title = {{A study of Persistent Threads style GPU programming for GPGPU workloads}},
+booktitle = {InPar '12: Innovative Parallel Computing},
+year = {2014},
+pages = {1--14},
+publisher = {IEEE},
+month = may
 }
 
 @inproceedings{Rompf:2013er,
