--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -88,7 +88,7 @@ Mandelbrot      & 2M
 N-body          & 32k
                 & 54.4  & (CUDA)
                 & 102.9 & (189\%)
-                & \multicolumn{2}{c}{(out of memory)}
+                & \multicolumn{2}{c}{\emph{(out of memory)}}
                 \\
 
 SMVM (protein)  & 2M
