--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -599,8 +599,8 @@ data Gen = Gen { unique        :: Int               -- fresh name generation
 %
 Although we use generated names to avoid accidental name capture, since the code
 generation state is refreshed for each kernel that is generated, the same names
-will be generated for equivalent operations. Thus, we will still be able to
-reuse generated kernels~(\S\ref{sec:caching_compiled_kernels}).
+will be generated for equivalent kernels, so we will still be able to reuse
+generated kernels~(\S\ref{sec:caching_compiled_kernels}).
 
 When code generation encounters a let binding, we first generate code for the
 bound expression, assign this result to a new (fresh) variable, then use this
