--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -2138,8 +2138,11 @@ able to process multiple elements per thread, but reduces the overhead of
 launching thread blocks. Figure~\ref{fig:occupancy} demonstrates the impact of
 varying thread block size on thread occupancy for the different hardware
 generations.
-% These calculations are a reimplementation of the CUDA occupancy calculator
-% spreadsheet that ships as part of the CUDA toolkit.
+
+These calculations are a reimplementation of the CUDA occupancy calculator
+spreadsheet that ships as part of the CUDA toolkit. Accelerate uses this
+information to launch kernels at either the smallest or largest thread block
+size that yields maximum occupancy, depending on the operation in question.
 
 \begin{figure}[htb]
     \centering
