--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1931,6 +1931,9 @@ Delite/LMS~\cite{Rompf:2013er} is a parallelisation framework for DSLs in Scala
 that uses library-based multi-pass staging to specify complex optimisations in a
 modular manner. Delite supports loop fusion for DSLs targeting GPUs using
 rewrite rules on the graph-based intermediate language.
+OptiML~\cite{Sujeeth:2011ti}, the primary embodiment of a Delite/LMS based DSL,
+demonstrates good performance in its target domain of machine learning
+applications.
 
 Nesl/GPU~\cite{Bergstrom:2012bi} compiles NESL code to CUDA. Nesl/GPU performs
 @map/map@ fusion, but can not fuse any other operations.
