--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 23 Mar 2015.
+%% Created using Papers on Wed, 25 Mar 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -3679,6 +3679,15 @@ year = {2014},
 pages = {1--14},
 publisher = {IEEE},
 month = may
+}
+
+@inproceedings{Sujeeth:2011ti,
+author = {Sujeeth, Arvind K and Lee, HyoukJoong and Brown, Kevin J and Rompf, Tiark and Chafi, Hassan and Wu, Michael and Atreya, Anand R and Odersky, Martin and Olukotun, Kunle},
+title = {{OptiML: An implicitly parallel domain-specific language for machine learning  
+}},
+booktitle = {ICML '11: The 28th International Conference on Machine Learning},
+year = {2011},
+month = jun
 }
 
 @inproceedings{Rompf:2013er,
