sec 6: summary table wibbles

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -49,7 +49,7 @@ A summary of the benchmark results is shown in
 Table~\ref{tab:benchmark-summary}.
 
 \begin{table}
-\begin{center}
+\centering
 \begin{tabu}{llrrrrrr}
 \toprule
 \small
@@ -98,9 +98,9 @@ SMVM (protein)  & 2M
                 \\
 
 Canny           & 16M
-                & 46  & (OpenCV)
-                & 100 & (217\%)
-                & tk  & (tk\%)
+                & 46.0 & (OpenCV)
+                & 100  & (217\%)
+                & tk   & (tk\%)
                 \\
 
 Fluid Flow      & 2M
@@ -140,7 +140,6 @@ Ray tracer      & 16M
                 \\
 \bottomrule
 \end{tabu}
-\end{center}
 \caption{Benchmark Summary}
 \label{tab:benchmark-summary}
 \end{table}
